# text_to_sql_AI_GP

./: .gitignore  config.yaml  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: ask.py  feedback.py
src/app/core/: config.py  dp.py  seed.py
src/app/models/: SQLresponse.py  feedback_request.py  query_response.py
src/app/scripts/: extract_variables.py  forbid_actions.py  gemini_service.py
